--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -4,6 +4,7 @@ $dark-white:             #f5f5f5;
 
 $grey:                   #9e9e9e;
 $dark-grey:              #282828;
+$grey-highlight:         #e8e8e8;
 
 $green:                  #339a65;
 $dark-green:             #25714a;
@@ -12,7 +13,7 @@ $green-transparent:      #008036;
 $blue:                   #4272b8;
 $blue-transparent:       #07449F;
 
-$purple:                 #745DA5;
+$purple:                 #433399;
 $dark-purple:            #47356c;
 
 $light-red:              #ff6052; 
