--- a/src/scss/rmp2.scss
+++ b/src/scss/rmp2.scss
@@ -109,7 +109,20 @@ Nav Bar and scrolling up effect
     left: 0;
     width: 100%;
     z-index: 3;
-    letter-spacing: 2px
+    letter-spacing: 2px;
+    padding: 40px !important;
+}
+
+a.navbar-brand {
+    background-image: url(../img/logo-white.png);
+    width: 80px;
+    height: 54px;
+}
+.is-fixed a.navbar-brand {
+    background-image: url(../img/logo-black.png);
+}
+.navbar-custom .navbar-collapse {
+    padding: 0 20px;
 }
 
 .navbar-custom .navbar-brand {
@@ -125,17 +138,30 @@ Nav Bar and scrolling up effect
 @media only screen and (min-width:768px) {
     .navbar-custom {
         background: 0 0;
-        border-bottom: 1px solid transparent
+        border-bottom: 1px solid transparent;
     }
+    
+    .navbar-custom .navbar-collapse {
+        padding: 0;
+    }
+    
     .navbar-custom .navbar-brand {
         color: $white;
-        padding: 20px
+        padding: 20px;
+            
+        img {
+            transform: translateY(-50%);
+        }
+            
+    }
+    .navbar-default .navbar-nav>li>a {
+        color: $white;
     }
     .navbar-custom .navbar-brand:hover,
     .navbar-custom .navbar-brand:focus {
         color: rgba(255, 255, 255, .8)
     }
-    .navbar-custom .nav li:not(.rmp-btn-green) a {
+    .navbar-custom .nav li:not(.rmp-btn.green) a {
         color: $white;
         padding: 20px
     }
@@ -169,7 +195,7 @@ Nav Bar and scrolling up effect
     }
     .navbar-custom.is-fixed {
         position: fixed;
-        top: -85px;
+        top: -141px;
         padding: 10px 0;
         background-color: rgba(255, 255, 255, .9);
         border-bottom: 1px solid #f2f2f2;
@@ -198,6 +224,7 @@ Nav Bar and scrolling up effect
         -o-transform: translate3d(0, 100%, 0);
         transform: translate3d(0, 100%, 0)
     }
+
 }
 
 .navbar-default .navbar-nav>.active>a,
@@ -406,81 +433,7 @@ a:hover .fa-circle  { color: $dark-grey;}
     }
 }
 
-//.rmp-btn-green {
-//    position: relative;
-//    background: transparent;
-//    z-index: 1;
-//    border-radius: 25px;
-//    text-transform: uppercase;
-//    padding: 15px;
-//    color: $white;
-//    height: 61px;
-//    width: 343px;
-//    line-height: 61px;
-//    background: $green;
-//
-//    a {
-//        text-align: center;
-//        position: relative;
-//        color: $white;
-//        padding: 15px 25px;
-//        width: 100%;
-//        height: auto;
-//    } 
-//    
-//    &:before {
-//        content: ' ';
-//        border: 2px solid #000;
-//        display: block;
-//        position: absolute;
-//        left: 3px;
-//        top: -4px;
-//        width: 100%;
-//        height: 100%;
-//        opacity: 0.7;
-//        background: transparent;
-//        border-radius: 25px;
-//    }
-//    
-//
-//    
-//}
 
-
-
-header .rmp-btn-green {
-    height: 40px;
-    width: 150px;
-    line-height: 10px;
-    padding: 0;
-    display: inline-block;
-    
-    a {
-        padding: 10px;
-        color: $white !important;
-        text-decoration: none;
-    }
-}
-
-#headerwrap .rmp-btn-green {
-    top: 50px;
-    padding: 19px 22px;
-    border-radius: 45px;
-    
-    a {
-        font-weight: 400;
-        font-size: 24px;
-    }
-    
-    &:before {
-        border-radius: 45px;
-    }
-}
-
-.accent-link {
-    font-weight: 400;
-    color: $green !important;
-}
 
 /************************
 * HOMEPAGE
@@ -488,7 +441,7 @@ header .rmp-btn-green {
 .page-home #headerwrap .overlay,
 .home #headerwrap .overlay {
     height: 100vh;
-}
+} 
 
 /*******************
 * PHOTOWRAP SECTION
